--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
           <button class="toggler" type="button"> Open </button>
         </div>
-        <div class="reasponsive responsive-open">
+        <div class="reasponsive">
           <h2>Lorem, ipsum.</h2>
           <ul class="socials">
             <li><img src="https://picsum.photos/30" alt=""></li>
